--- a/Multas-tB/Multas-tB/Views/Agentes/Index.cshtml
+++ b/Multas-tB/Multas-tB/Views/Agentes/Index.cshtml
@@ -7,7 +7,7 @@
 <h2>Index</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Criar Novo Agente", "Create")
 </p>
 <table class="table">
     <tr>
@@ -32,12 +32,15 @@
             @Html.DisplayFor(modelItem => item.Esquadra)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Fotografia)
+            @*@Html.DisplayFor(modelItem => item.Fotografia)*@
+            <a href="~/imagens/@item.Fotografia" target="_blank">
+                <img src="~/imagens/@item.Fotografia" width="50" height="37" />
+            </a>
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.ID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.ID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.ID })
+            @Html.ActionLink("Editar", "Edit", new { id=item.ID }) |
+            @Html.ActionLink("Detalhes", "Details", new { id=item.ID }) |
+            @Html.ActionLink("Apagar", "Delete", new { id=item.ID })
         </td>
     </tr>
 }
