--- a/Multas-tB/Multas-tB/Views/Agentes/Delete.cshtml
+++ b/Multas-tB/Multas-tB/Views/Agentes/Delete.cshtml
@@ -1,15 +1,17 @@
 ﻿@model Multas_tB.Models.Agentes
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Agentes";
 }
 
-<h2>Delete</h2>
+<h2>Apagar</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Quer mesmo apagar este Agente</h3>
 <div>
     <h4>Agentes</h4>
     <hr />
+    @*HTML helper para apresentar as mensagens de erros*@
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     <dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.Nome)
@@ -28,7 +30,9 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Fotografia)
+            <a href="~/imagens/@Model.Fotografia" target="_blank">
+                <img src="~/imagens/@Model.Fotografia" width="50" height="37" />
+            </a>
         </dt>
 
         <dd>
@@ -37,12 +41,13 @@
 
     </dl>
 
-    @using (Html.BeginForm()) {
+    @using (Html.BeginForm())
+    {
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Apagar" class="btn btn-danger" /> |
+            @Html.ActionLink("Regressar a lista", "Index")
         </div>
     }
 </div>
